<resources>
    <string name="app_name">PorscheTower</string>
    <string name="default_notification_channel_id">porsche</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="title_login">SIGN-IN</string>
    <string name="font_porsche">PorscheFont</string>
    <string name="pls_fill_fields">Please fill fields</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log-out</string>
    <string name="reset_password">Reset Password</string>
    <string name="touch_id">Touch ID</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="spanish">Spanish</string>
    <string name="txt_minute">Minute</string>
    <string name="language_setting">Language Setting</string>
    <string name="automatic_car_elevator_log_out_time">Automatic Car Elevator Log-out Time</string>
    <string name="main_title">PORSCHE DESIGN</string>
    <string-array name="title_string_array">
        <item>CAR ELEVATOR</item>
        <item>IN-UNIT</item>
        <item>CAR CONCIERGE</item>
        <item>POOL BEACH</item>
        <item>WELLNESS</item>
        <item>ACTIVITIES</item>
        <item>DINING</item>
        <item>DOCUMENTS</item>
        <item>INFORMATIN BOARD</item>
        <item>LOCAL INFO</item>
        <item>CONCIERGE</item>
    </string-array>
    <string-array name="car_elevator_titles">
        <item>Request Car Elevator</item>
        <item>Schedule Car Elevator</item>
        <item>Scheduled Pickups</item>
    </string-array>
    <string-array name="in_unit_titles">
        <item>Request Maintenance</item>
        <item>Request Front Desk Call Back</item>
        <item>View Front Desk Camera</item>
        <item>Request Security</item>
    </string-array>
    <string-array name="car_concierge_titles">
        <item>Detailing</item>
        <item>Service</item>
        <item>Storage</item>
    </string-array>
    <string-array name="pool_beach_titles">
        <item>Pool</item>
        <item>Beach</item>
    </string-array>
    <string-array name="wellness_titles">
        <item>Salon Spa</item>
        <item>Fitness</item>
        <item>Request Room</item>
    </string-array>
    <string-array name="activities_titles">
        <item>Golf Sim</item>
        <item>Racing Sim</item>
        <item>Theater</item>
        <item>Community Room</item>
    </string-array>
    <string-array name="dining_titles">
        <item>In House Dining</item>
        <item>Request a Call</item>
    </string-array>
    <string-array name="documents_titles">
        <item>Documents</item>
        <item>Unit Manual</item>
    </string-array>
    <string-array name="info_board_titles">
        <item>Directory</item>
        <item>Personal Notifications</item>
        <item>Building Maintenance</item>
        <item>Building Events</item>
    </string-array>
    <string-array name="local_info_titles">
        <item>Weather</item>
        <item>View Weather</item>
        <item>View Beach</item>
    </string-array>
    <string-array name="concierge_titles">
        <item>Call Concierge</item>
        <item>Request Transportation</item>
        <item>Request Dry Cleaning</item>
    </string-array>
    <string-array name="gym_titles">
        <item>Personal Trainers</item>
        <item>Classes</item>
    </string-array>
    <string-array name="repeat_schedule_titles">
        <item>One Time</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="theatre_titles">
        <item>Schedule for Private Use</item>
        <item>Movie Schedule</item>
    </string-array>
    <string-array name="menutitles_array">
        <item>@array/car_elevator_titles</item>
        <item>@array/in_unit_titles</item>
        <item>@array/car_concierge_titles</item>
        <item>@array/pool_beach_titles</item>
        <item>@array/wellness_titles</item>
        <item>@array/activities_titles</item>
        <item>@array/dining_titles</item>
        <item>@array/documents_titles</item>
        <item>@array/info_board_titles</item>
        <item>@array/local_info_titles</item>
        <item>@array/concierge_titles</item>
    </string-array>
    <string name="title_car_unavailable">Car Unavailable</string>
    <string name="msg_unavailable_contact_valet">is currently unavailable. Please contact the Valet for futher information.</string>
    <string name="title_car_in_gargage">Car in Garage</string>
    <string name="msg_parked_gargage_contact_valet">is parked in the Garage. Please contact the Valet to have your Car delivered curbside.</string>
    <string name="title_close">Close</string>
    <string name="msg_car_unavailable">Oops! This Car is Currently Unavailable. Please Contact Car Concierge For More Information.</string>
    <string name="msg_has_been_pickup">Your Car Has Been Scheduled For Pick-up</string>
    <string name="msg_request_sent">Your Request has been sent.</string>
    <string name="msg_front_desk_req_confirmed">Front Desk Request Confirmed</string>
    <string name="msg_req_sent_front_desk">Your request was sent. The Front Desk will call you shortly.</string>
    <string name="msg_security_req_confirmed">Security Request Confirmed</string>
    <string name="msg_req_sent_security">Your request was sent. Security will be contacting you immediately.</string>
    <string name="msg_car_scheduled_for_storage">Your car has been scheduled for storage, an attendant will contact you if necessary.</string>
    <string name="txt_make_an_order">Make an Order</string>
    <string name="txt_view_menu">View Menu</string>
    <string name="txt_make_reservation">Make Reservation</string>
    <string name="txt_car">CAR</string>
    <string name="txt_date">DATE</string>
    <string name="txt_time">TIME</string>
    <string name="txt_cancel">CANCEL</string>
</resources>