<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        tools:context="com.unlimitec.porschetower.Fragments.SchedulePickupsFragment">

        <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@color/caldroid_darker_gray">
        <TextView
            android:layout_marginLeft="@dimen/information_margin"
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="wrap_content"
            android:text="@string/txt_car"
            android:textSize="@dimen/txt_titlesize_from"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/txt_date"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/txt_time"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/txt_cancel"/>

    </LinearLayout>

    <ListView
            android:id="@+id/listview_pickups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>
