<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pos.porschetower.Fragments.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:gravity="center"
        android:background="@drawable/setting_background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="60"
            android:layout_height="match_parent"
            android:background="@drawable/setting_panel"
            android:weightSum="1"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:gravity="center"
                android:id="@+id/linearLayout"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btn_logout"
                        android:layout_width="0dp"
                        android:layout_weight="0.4"
                        android:layout_height="match_parent"
                        android:text="@string/log_out"
                        android:textSize="@dimen/settingbutton_textsize"
                        android:layout_gravity="left"
                        android:background="@drawable/btn_logout" />

                    <Button
                        android:id="@+id/btn_reset_password"
                        android:layout_width="0dp"
                        android:layout_weight="0.4"
                        android:layout_height="match_parent"
                        android:text="@string/reset_password"
                        android:onClick="onResetPW"
                        android:textSize="@dimen/settingbutton_textsize"
                        android:layout_gravity="right"
                        android:background="@drawable/btn_reset_password" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:layout_gravity="center"
                    android:weightSum="1">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.25"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language_setting"
                            android:textSize="@dimen/settingpanel_textsize"
                            android:id="@+id/txt_language_setting" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:weightSum="1">

                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="wrap_content"
                            android:text="@string/english"
                            android:textSize="@dimen/settingbutton_textsize"
                            android:id="@+id/btn_english"
                            android:background="@drawable/btn_language_first_normal" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="wrap_content"
                            android:text="@string/german"
                            android:textSize="@dimen/settingbutton_textsize"
                            android:id="@+id/btn_german"
                            android:background="@drawable/btn_language_middle_normal" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="wrap_content"
                            android:text="@string/italian"
                            android:textSize="@dimen/settingbutton_textsize"
                            android:id="@+id/btn_italian"
                            android:background="@drawable/btn_language_middle_normal" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="wrap_content"
                            android:text="@string/spanish"
                            android:textSize="@dimen/settingbutton_textsize"
                            android:id="@+id/btn_spanish"
                            android:background="@drawable/btn_language_last_normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.25"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/automatic_car_elevator_log_out_time"
                            android:textSize="@dimen/settingpanel_textsize"
                            android:id="@+id/txt_logout_time" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:weightSum="1">

                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="wrap_content"
                            android:text="1 Minute"
                            android:textSize="@dimen/settingbutton_textsize"
                            android:id="@+id/btn_1min"
                            android:background="@drawable/btn_language_first_normal" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="wrap_content"
                            android:text="2 Minutes"
                            android:textSize="@dimen/settingbutton_textsize"
                            android:id="@+id/btn_2min"
                            android:background="@drawable/btn_language_middle_normal" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="wrap_content"
                            android:text="3 Minutes"
                            android:textSize="@dimen/settingbutton_textsize"
                            android:id="@+id/btn_3min"
                            android:background="@drawable/btn_language_middle_normal" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="wrap_content"
                            android:text="4 Minutes"
                            android:textSize="@dimen/settingbutton_textsize"
                            android:id="@+id/btn_4min"
                            android:background="@drawable/btn_language_last_normal" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
