<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:gravity="center"
    android:background="#000"
    tools:context=".Fragments.DiningFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="60"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="#f00"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="0.8"
            android:background="#000"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btn_phone_dining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/phone"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dining_margin"
                android:layout_marginRight="@dimen/dining_margin"
                android:layout_marginTop="@dimen/dining_margin"
                android:layout_marginBottom="@dimen/dining_margin"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/description_textsize"
                    android:maxLines="6"
                    android:id="@+id/txt_dining_restaurant_description"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:background="#000"
            android:weightSum="100">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/weather_margin"
                android:weightSum="1">
                <Button
                    android:id="@+id/btn_makeAnOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:textAllCaps="false"
                    android:textSize="@dimen/button_text_size_dining"
                    android:text="@string/txt_make_an_order" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/weather_margin"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_viewMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:textAllCaps="false"
                    android:textSize="@dimen/button_text_size_dining"
                    android:text="@string/txt_view_menu"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/weather_margin"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_makeReservation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:textAllCaps="false"
                    android:textSize="@dimen/button_text_size_dining"
                    android:text="@string/txt_make_reservation" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
