<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unlimitec.porschetower.LoginActivity">

    <RelativeLayout
        android:id="@+id/main_top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_bar_height"
        android:background="@color/colorNavBar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.unlimitec.porschetower.customview.PorscheTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PORSCHE DESIGN"
                android:layout_marginLeft="@dimen/title_text_margin"
                android:layout_gravity="left"
                android:textColor="@color/title_color"
                android:textSize="@dimen/title_text_size1"
                android:textStyle="bold" />

            <com.unlimitec.porschetower.customview.PorscheTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TOWER MIAMI"
                android:layout_marginLeft="@dimen/title_text_margin"
                android:layout_gravity="left"
                android:textColor="@color/title_color"
                android:textSize="@dimen/title_text_size1"
                android:textStyle="bold" />

            <com.unlimitec.porschetower.customview.PorscheTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="P'0001"
                android:layout_marginLeft="@dimen/title_text_margin"
                android:layout_gravity="left"
                android:textColor="@color/title_login_color"
                android:textSize="@dimen/title_text_size2"
                android:textStyle="bold"
                android:id="@+id/porscheTextView" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/activity_login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/title_text_margin"
        android:layout_marginRight="@dimen/title_text_margin"
        android:layout_marginTop="@dimen/title_login_margin3"
        android:layout_marginBottom="@dimen/title_login_margin3"
        android:layout_above="@+id/main_bottom_layout"
        android:layout_below="@+id/main_top_layout"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_centerInParent="true" >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <com.unlimitec.porschetower.customview.PorscheTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LOGIN"
                    android:layout_gravity="left"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/title_text_size1"
                    android:textStyle="bold"
                    android:id="@+id/porscheTextView2" />

                <EditText
                    android:id="@+id/activity_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/edittext_padding"
                    android:background="@color/title_color"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="@color/login_hint_color"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/activity_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/edittext_padding"
                    android:layout_marginTop="@dimen/title_login_margin2"
                    android:background="@color/title_color"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/login_hint_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/title_login_margin2"
                    android:layout_marginBottom="@dimen/title_login_margin2"
                    android:layout_gravity="left"
                    android:textColor="@color/title_color"
                    android:background="@color/title_color"
                    android:textSize="@dimen/title_text_size1"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/activity_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_loginbutton_height"
                    android:layout_alignParentBottom="true"
                    android:background="@color/btn_signin_color"
                    android:onClick="onLogin"
                    android:text="@string/title_login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/main_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_bar_height"
        android:layout_alignParentBottom="true"
        android:background="@color/colorNavBar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/title_color"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>
